fix z-index and replace base url with constant

--- a/static/css/techreport/techreport.css
+++ b/static/css/techreport/techreport.css
@@ -314,6 +314,10 @@ nav {
   outline-offset: 2px;
 }
 
+.dropdown-content {
+  z-index: 2;
+}
+
 .select-label::before {
   content: "";
   display: block;
